[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "pool"
version = "1.2.0"
authors = [{name = "TurnKey GNU/Linux", email = "jeremy@turnkeylinux.org"}]
license = {text = "GPLv3+"}
description = "Maintain a pool of deb packages from source and binary stocks"

[project.urls]
Homepage = "https://github.com/turnkeylinux/pool"

[tool.setuptools]
packages = ["pool_lib"]
script-files = ["pool_bin"]
include-package-data = false

[tool.setuptools.package-data]
pool_lib = ["py.typed"]
